<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
<TextView
    android:id="@+id/ImgChooserdialogTittle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/choose_image"
    android:textSize="14dp"
    android:layout_margin="10dp"/>
<LinearLayout
    android:id="@+id/captureCameraLayout"
    android:layout_below="@+id/ImgChooserdialogTittle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/camraImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/camera"/>

    <TextView
        android:id="@+id/camraTextView"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:text="@string/camera"
        android:textAlignment="center"
        android:textSize="12sp"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/galleryLayout"
        android:layout_toRightOf="@+id/captureCameraLayout"
        android:layout_below="@+id/ImgChooserdialogTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/galleryImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/gallery"/>

        <TextView
            android:id="@+id/galleryTextView"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:text="@string/gallery"
            android:textAlignment="center"/>
    </LinearLayout>
</RelativeLayout>