<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/layout_bg">

    <RelativeLayout
        android:id="@+id/layoutDialogTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/txt_customer_care"
            android:layout_marginStart="@dimen/_15sdp"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/dialogClose"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="end"
            android:src="@drawable/close_icon" />
    </RelativeLayout>

    <View
        android:id="@+id/titleDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_below="@id/layoutDialogTittle"
        android:background="@color/lineColor" />

    <TextView
        android:id="@+id/txtCustomerCareno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtBtnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/call_message_button"
        android:gravity="center"
        android:text="@string/call_no"
        android:textAlignment="center"
        android:textColor="@color/white" />
</RelativeLayout>
