<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phone_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:src="@drawable/loadx_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/enter_otp"
            android:textSize="18sp" />

        <com.chaos.view.PinView
            android:id="@+id/pinTxt"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="3dp"
            android:textColor="@color/grey"
            android:focusable="true"
            android:textSize="14sp"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:cursorWidth="2dp"
            app:itemCount="4"
            app:viewType="line"
            android:imeOptions="actionDone"
            android:onClick="getOTPFromUser"/>

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:maxLines="1"
            android:text="@string/otp_sent"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/mobile_no"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:text=""
            android:textAlignment="center"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/resendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAppearance="@color/app_color"
            android:gravity="center"
            android:text="@string/resendOtp"
            android:textAlignment="center"
            android:textColor="@color/app_color"
            android:textSize="16sp"
            android:onClick="onResendOTPClicked"/>
        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="validateOtp"/>
    </LinearLayout>
    <com.cn.loadx.customUserInterface.LoadingIndicatorView
        android:id="@+id/animatedLoader"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</android.support.constraint.ConstraintLayout>