<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_150sdp"
    android:layout_gravity="center"
    android:background="@drawable/layout_bg">

    <RelativeLayout
        android:id="@+id/layoutSupervisorDialogTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:text="@string/txt_customer_care"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/dialogClose"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/close_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutSupervisorDetail"
        android:layout_centerInParent="true"
        android:layout_below="@id/layoutSupervisorDialogTittle">

        <View
            android:id="@+id/titleDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@color/lineColor" />

        <TextView
            android:id="@+id/txtSupervisorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleDivider"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text=""
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSupervisorNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/txtSupervisorName"
            android:text=""
            android:textAlignment="center"
            android:textSize="14sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/txtBtnCall"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/call_message_button"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/call_no"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtBtnMessage"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_30sdp"
            android:singleLine="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/call_message_button"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/message_no"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>